# big_fdw

./: README.md
common/: c_begin.h  c_estimate.h  c_f8.h  c_path.h
sample1/: CMakeLists.txt  begin.h  code_t.h  end.h  explain.h  file_t.h  handler.h  i3n.h  i4n.h  iterate.h  option.h  path.h  plan.h  relsize.h  rescan.h  s1_fdw--1.0.sql  s1_fdw.c  s1_fdw.control  s1_fdw.test.sql  state.h  test.sh  validator.h
